@@ -14,6 +14,8 @@ cupt (2.4.0~) UNRELEASED; urgency=low
       - Use normalized version priority in score calculations.
       - If a solution to a problem is an "unsatisfied" element, partially
         stick all competing solution elements, not only preceding ones.
+      - Skip a solution if some element to auto-remove cannot be removed
+        due to being (partially) sticked. (Closes: #641473)
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 05 Dec 2011 11:02:17 +0200
 
